# fhe-ai-inference

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  structure.txt  tests_output.txt
.github/workflows/: tests.yml
docs/: fhe_ai_inference.html  index.html  search.js
docs/fhe_ai_inference/: activations.html  ckks.html  core.html  encoder.html  fhe.html  fheai.html  fheai_bootstrap.html  layers.html  model.html  openfhe_ckks.html  params.html  params_bootstrap.html  runner.html  utils.html
docs/fhe_ai_inference/runner/: model_runner.html
examples/: secure_inference_mlp.py
fhe_ai_inference/: activations.py  ckks.py  core.py  encoder.py  fhe.py  fheai.py  fheai_bootstrap.py  layers.py  model.py  openfhe_ckks.py  params.py  params_bootstrap.py  utils.py
fhe_ai_inference/layers/: __init__.py  linear.py
fhe_ai_inference/runner/: model_runner.py
scripts/: bootstrap_demo.py  debug_bootstrap_setup.py  inspect_context.py  precision_drift.py  test_openfhe_init.py
tests/: test_activation.py  test_bootstrap.py  test_ckks.py  test_core.py  test_encoder.py  test_fhe.py  test_fhe_inference.py  test_fheai.py  test_fheai_bootstrap.py  test_fheai_constructor.py  test_fhelinear.py  test_fhelinear_standalone.py  test_homomorphic_linear_inference.py  test_linear.py  test_linear_internal.py  test_model_runner.py  test_openfhe_ckks.py  test_params.py  test_params_bootstrap.py
tutorials/: bootstrapping.md  fhelinear_tutorial.py  getting_started_with_openfhe.md  getting_started_with_openfhe.py  index.md  precision_and_noise.md  security_and_parameters.md
