[project]
name = "fhe-ai-inference"
version = "0.1.0"
description = "A Python library for secure neural network inference using Fully Homomorphic Encryption with OpenFHE"
readme = "README.md"
authors = [{ name = "David William Silva", email = "contact@davidwsilva.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "openfhe>=0.8.9",
    "torch>=2.0.0",
    "numpy>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/davidwilliam/fhe-ai-inference"
Documentation = "https://github.com/davidwilliam/fhe-ai-inference/blob/main/docs"
Repository = "https://github.com/davidwilliam/fhe-ai-inference"
Issues = "https://github.com/davidwilliam/fhe-ai-inference/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov=fhe_ai_inference --cov-report=html"
format = "black ."
lint = "flake8 fhe_ai_inference tests"